AUGREL/src/objects/SfActivity__x.object
<CustomObject>
    <fields>
        <fullName>serviceTypeC__c</fullName>
        <description>serviceTypeC</description>
        <externalDeveloperName>serviceTypeC</externalDeveloperName>
        <label>serviceTypeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceCreatedByC__c</fullName>
        <description>sourceCreatedByC</description>
        <externalDeveloperName>sourceCreatedByC</externalDeveloperName>
        <label>sourceCreatedByC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceCreatedDateC__c</fullName>
        <description>sourceCreatedDateC</description>
        <externalDeveloperName>sourceCreatedDateC</externalDeveloperName>
        <label>sourceCreatedDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sourceSystemCreatedByC__c</fullName>
        <description>sourceSystemCreatedByC</description>
        <externalDeveloperName>sourceSystemCreatedByC</externalDeveloperName>
        <label>sourceSystemCreatedByC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srFirstNameC__c</fullName>
        <description>srFirstNameC</description>
        <externalDeveloperName>srFirstNameC</externalDeveloperName>
        <label>srFirstNameC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srLastNameBusinessNameC__c</fullName>
        <description>srLastNameBusinessNameC</description>
        <externalDeveloperName>srLastNameBusinessNameC</externalDeveloperName>
        <label>srLastNameBusinessNameC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>starsSrNumberC__c</fullName>
        <description>starsSrNumberC</description>
        <externalDeveloperName>starsSrNumberC</externalDeveloperName>
        <label>starsSrNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>statusC__c</fullName>
        <description>statusC</description>
        <externalDeveloperName>statusC</externalDeveloperName>
        <label>statusC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subjectC__c</fullName>
        <description>subjectC</description>
        <externalDeveloperName>subjectC</externalDeveloperName>
        <label>subjectC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telemarketingPrivacyC__c</fullName>
        <description>telemarketingPrivacyC</description>
        <externalDeveloperName>telemarketingPrivacyC</externalDeveloperName>
        <label>telemarketingPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfsLfsDealerPrivacyC__c</fullName>
        <description>tfsLfsDealerPrivacyC</description>
        <externalDeveloperName>tfsLfsDealerPrivacyC</externalDeveloperName>
        <label>tfsLfsDealerPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfsLfsInfoEmailAddrC__c</fullName>
        <description>tfsLfsInfoEmailAddrC</description>
        <externalDeveloperName>tfsLfsInfoEmailAddrC</externalDeveloperName>
        <label>tfsLfsInfoEmailAddrC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thirdPartyPrivacyC__c</fullName>
        <description>thirdPartyPrivacyC</description>
        <externalDeveloperName>thirdPartyPrivacyC</externalDeveloperName>
        <label>thirdPartyPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>topicC__c</fullName>
        <description>topicC</description>
        <externalDeveloperName>topicC</externalDeveloperName>
        <label>topicC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>typeC__c</fullName>
        <description>typeC</description>
        <externalDeveloperName>typeC</externalDeveloperName>
        <label>typeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warmTransferC__c</fullName>
        <description>warmTransferC</description>
        <externalDeveloperName>warmTransferC</externalDeveloperName>
        <label>warmTransferC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SfActivity</label>
    <pluralLabel>SfActivity</pluralLabel>
</CustomObject>